[package]
name = "rwkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.5"

candle-transformers = {features = ["cuda"], version = "0.4"}
candle-core = {features = ["cuda"], version = "0.4"}
candle-nn = {features = ["cuda"], version = "0.4"}
candle-examples = "0.4"

hf-hub="0.3"
tracing-subscriber="0.3"
tracing-chrome="0.7"
tokenizers="0.15"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]